--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -675,16 +675,19 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .alldeals_tabs{}
 .alldeals_tabs input[type=radio]{display:none;}
 .alldeals_tabs label{transition:background 0.4s ease-in-out, height 0.2s linear;display:inline-block;cursor:pointer;color:#2EBEB9;width:20%;height:3em;border-top-left-radius:3px;border-top-right-radius:3px;background:#FCFCFC;text-align:center;line-height:3em;}
+.show_tabs label{width:auto;padding:0 10px;}
 .alldeals_tabs label:last-of-type{border-bottom:none;}
 .alldeals_tabs label:hover{background:#259692;color:#fff;}
 @media screen and (max-width: 1600px){
-  .alldeals_tabs label{width:15%;} 
+  .alldeals_tabs label{width:15%;}
+  .show_tabs label{width:auto;} 
 }
 @media screen and (max-width: 900px){
   .alldeals_tabs label{width:20%;} 
+  .show_tabs label{width:auto;}
 }
 @media screen and (max-width: 600px){
-  .alldeals_tabs label{width:100%;display:block;border-bottom:2px solid #C7C6C4;border-radius:0;} 
+  .alldeals_tabs label{width:100%;display:block;border-bottom:2px solid #fff;border-radius:0;} 
 }
 @media screen and (max-width: 600px){
   .alldeals_tabs{margin:0;} 
