--- a/app/views/deals/_notes_promo_test.html.erb
+++ b/app/views/deals/_notes_promo_test.html.erb
@@ -63,11 +63,11 @@
         <em><span class="span_01"><%= number_to_currency(promo_h.p_spare_26) %></span><%= number_to_currency(running_total) %></em>
         <% if promo_h.p_spare_50 && (promo_h.p_spare_50 < DateTime.now) %>
         <% promo_h.p_spare_50 %>
-         <p class="expired">Promo code has EXPIRED.</p>
+         <p class="expired">EXPIRED.</p>
         <% else %>
           <% if promo_h.p_spare_51 && (promo_h.p_spare_51 <= DateTime.now) %>
           <% promo_h.p_spare_51 %>
-            <p class="endtoday">Promo code expires today.</p>
+            <p class="endtoday">Expire Today.</p>
           <% end %>
         <% end %>
       </div>
