--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -86,7 +86,7 @@
                 <% if @promocode.p_spare_51.present? %>
                  <% if @promocode.p_spare_51 <= DateTime.now %>
                  <% @promocode.p_spare_51 %>
-                  <em class="endtoday">* This Promo Code expires today.</em> 
+                  <em class="endtoday">* Expire Today</em> 
                  <% else %>
                   <em>* Code End Date: <%= @promocode.p_end_date %> or while supplies last.</em>
                  <% end %> 
