--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -42,7 +42,7 @@
            <div class="store_info">
             <em>* Click through to see <%= @storepromotion.sp_store_name %>'s special offers.</em>
             <% if @storepromotion.sp_promocode.present? %>
-              <em>* Enter <%= @storepromotion.sp_store_name %>'s' promo code "<span><%= @storepromotion.sp_promocode %></span>" at checkout to receive your savings.</em>
+              <em>* Enter <%= @storepromotion.sp_store_name %>'s promo code "<span><%= @storepromotion.sp_promocode %></span>" at checkout to receive your savings.</em>
             <% else %>
               <em>* No Code Required</em>
             <% end %>
@@ -58,11 +58,11 @@
                     <em class="code_em">
                       <% if @storepromotion.sp_spare_60 < DateTime.now %>
                       <% @storepromotion.sp_spare_60 %>
-                        <em class="expired">EXPIRED.</em>
+                        <em class="expired">EXPIRED</em>
                       <% else %>
                         <% if @storepromotion.sp_spare_61 <= DateTime.now %>
                         <% @storepromotion.sp_spare_61 %>
-                          <em class="endtoday">* This coupon expires today.</em>
+                          <em class="endtoday">* Expire Today.</em>
                         <% else %>
                           * End Date: <%= @storepromotion.sp_end_date %> 
                         <% end %>
@@ -81,7 +81,7 @@
                     <% else %>
                      <% if @storepromotion.sp_spare_61 <= DateTime.now %>
                       <% @storepromotion.sp_spare_61 %>
-                        <em class="endtoday">* This offer expires today.</em>
+                        <em class="endtoday">* Expire Today</em>
                       <% else %>
                         <em>* End Date: <%= @storepromotion.sp_end_date %></em>
                       <% end %>
