--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -153,8 +153,8 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li{list-style:inside;}
-  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;font-size:13px;}
-  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;font-size:13px;text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:400px;overflow:hidden;display:inline-block;line-height:11px;}
+  .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{margin-left:20px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;}
   .codes .card_wrap .card .promo_btn{margin-top:90px;}
