--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -36,6 +36,7 @@
           <%= f.input :h_spare_08, label: 'Average Rate' %>
           <%= f.input :h_spare_09, label: 'Number of Reviews' %>
           <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
+          <%= f.input :h_spare_45, label: 'Last Discount Price' %>
           <!-- <%= f.input :h_spare_01, label: 'Extra Deals?' %> -->
           <!--<%= f.input :h_list_price, label: '(Old)List Price' %>
           <%= f.input :h_price, label: '(Old)Current Price' %>-->
