--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -9,6 +9,7 @@
         <div class="dealpage_title"><p>Sales & Promotions</p></div>    
       <% end %>
     </div>
+    <%= render 'deals/header_store' %>
 
     <div class="sp_wrap">
 
