--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -3,7 +3,7 @@
   
   <div class="show_wrap clearfix">
     <div class="wrap">
-    <%= render 'promocodes/header' %>  
+    <%= render 'deals/header_store' %>
     
       <div class="show_box clearfix">
         
