--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -27,7 +27,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:25px;margin-bottom:0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_01{color:#616161;text-decoration:line-through;font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_02{margin-left:10px;font-size:20px;}
-.show_wrap .show_box .show_inner .hotdeal_inner .extra_info{margin:12px 0;}
+/*.show_wrap .show_box .show_inner .hotdeal_inner .extra_info{margin:12px 0;}*/
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info .basic_info{font-weight:500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info .basic_info .primeornot{display:none;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em{color:#616161;font-weight:300;font-size:12px;display:block;margin-bottom:5px;}
