--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -5,7 +5,7 @@
 
     <div class="form-inputs">
       <%= f.association :spcategory, label: 'Category Of Stores' %><br />
-      <%= f.input :sp_store_name, label: 'Store Name' %>
+      <!-- <%= f.input :sp_store_name, label: 'Store Name' %> -->
       <%= f.input :sp_image, label: 'Store Logo' %>
       <%= f.input :sp_link, label: 'Store Link' %>
       <%= f.input :sp_title, label: 'Title of Deal'%>
