--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -63,7 +63,7 @@
                       <% storepromotion.sp_spare_61 %>
                        <em class="endtoday code_em">Expire Today</em>
                       <% else %>
-                       <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
+                       <!-- <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em> -->
                        <!-- <em class="code_em">* Offers can be expired fast.</em> -->
                       <% end %>
                     <% end %>
@@ -98,6 +98,7 @@
                     <% end %>
                   <% end %>
                 </em>-->
+                
                 <!-- <% if storepromotion.sp_end_date.present? %>
                   <div class="promocode_m">
                     <% if storepromotion.sp_promocode.present? %>
