--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -64,7 +64,7 @@
                         <% @storepromotion.sp_spare_61 %>
                           <em class="endtoday">* Expire Today.</em>
                         <% else %>
-                          * End Date: <%= @storepromotion.sp_end_date %> 
+                          * Ends Date: <%= @storepromotion.sp_end_date %> 
                         <% end %>
                       <% end %>
                     </em>
@@ -97,7 +97,7 @@
             </div><!--./store_info-->
 
             <div class="code_btn">
-              <a class="m_btn p_btn store_btn" target="_blank" href="<%= @storepromotion.sp_link %>">Check it out on &ensp;<em><%= @storepromotion.sp_store_name %></em></a>
+              <a class="m_btn p_btn store_btn" target="_blank" href="<%= @storepromotion.sp_link %>">Check it out on &ensp;<em><%= @storepromotion.spcategory.name %></em></a>
             </div>
 
              <% if @storepromotion.sp_description.present? %>
