--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -144,7 +144,7 @@
 
                 <% if can? :update, storepromotion %>
                   <div class="admin">
-                    <%= link_to 'Show', storepromotion %> |
+                    <!-- <%= link_to 'Show', storepromotion %> | -->
                     <%= link_to 'Edit', edit_storepromotion_path(storepromotion) %> |
                     <%= link_to 'Destroy', storepromotion, method: :delete, data: { confirm: 'Are you sure?' } %>
                   </div>
