--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -89,13 +89,13 @@
 .featured .sm_mobile .store_search input{padding:10px;width:80%;margin-bottom:5px;}
 
 .sp_wrap .sp_right .sp_card{border-bottom:1px solid #ccc;float:left;width:48%;margin:1%;height:100px;position:relative;}
-.sp_wrap .sp_right .sp_card .admin{font-size:12px;position:absolute;bottom:0;}
+.sp_wrap .sp_right .sp_card .admin{font-size:12px;position:absolute;bottom:0;right:0;}
 .sp_wrap .sp_right .sp_image{float:left;width:15%;height:100px;position:relative;}
 .sp_wrap .sp_right .sp_image img{width:100%;height:70px;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
 .sp_wrap .sp_right .inner{float:left;width:80%;margin-left:5%;}
 .sp_wrap .sp_right .inner span.index_title{background:#ffff00;font-weight:bold;}
 /*.sp_wrap .sp_right .inner .expire_date em{display:inline-block;}*/
-.sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:1.4em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:1}
+.sp_wrap .sp_right .inner .sp_title{margin:2px 0;font-weight:500;line-height:1.2;font-size:15px;line-height:1.4;height:2.8em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
 .sp_wrap .sp_right .inner .sp_title a{color:#616161;display:block;font-weight:100;}
 .sp_wrap .sp_right .inner .sp_code{margin-bottom:5px;}
 .sp_wrap .sp_right .inner .h_price{margin-top:7px;}
