--- a/app/views/deals/_body_stores.html.erb
+++ b/app/views/deals/_body_stores.html.erb
@@ -8,7 +8,17 @@
         <div class="st_box clearfix">          
           <div class="st_image"><%= link_to image_tag(promo.sp_image, alt: promo.sp_title, title: promo.sp_store_name), promo %></div>
           <div class="inner">
-            <p><em class="st_title"><%= promo.sp_store_name %></em> <% if promo.sp_spare_40.present? || promo.sp_spare_42.present?%><% else %>| Up to <%= number_to_percentage(promo.sp_percentage_01, precision: 0) %> OFF<% end %> <% if can? :update, promo %> | <%= link_to 'Edit', edit_storepromotion_path(promo) %><% end %></p>
+            <p><em class="st_title"><%= promo.spcategory.name %></em> 
+              <% if promo.sp_spare_40.present? || promo.sp_spare_42.present?%>
+              <% else %>
+                <% if promo.sp_percentage_01.present? %>
+                  | Up to <%= number_to_percentage(promo.sp_percentage_01, precision: 0) %> OFF
+                <% end %>
+              <% end %> 
+              <% if can? :update, promo %>
+               | <%= link_to 'Edit', edit_storepromotion_path(promo) %>
+              <% end %>
+            </p>
             <span><%= link_to promo.sp_title, promo %></span>
 
             <div class="pricing">
@@ -46,7 +56,7 @@
     
    </div><!--./st_top-->
 
-
+   <!-- Tab Menu-->
    <div class="st_top_side clearfix">
     <div class="tab-menu-test">
       <div class="title-tab-menu"><span>What's</span> Trend?</div>
@@ -62,7 +72,15 @@
           <% @most_promotions.each do |mp| %>
             <div class="tab-menu-text">
               <div class="tab-menu-img"><%= link_to image_tag(mp.sp_image, alt: mp.sp_title, title: mp.sp_store_name), mp %></div>
-              <div class="tab-menu-text-title"><p><%= mp.sp_store_name %> <% if mp.sp_spare_40.present? || mp.sp_spare_42.present?%><% else %>| Up to <%= mp.sp_percentage_01 %>% Off<% end %></p>
+              <div class="tab-menu-text-title">
+                <p><%= mp.spcategory.name %> 
+                  <% if mp.sp_spare_40.present? || mp.sp_spare_42.present?%>
+                  <% else %>
+                    <% if mp.sp_percentage_01.present? %>
+                      | Up to <%= mp.sp_percentage_01 %>% Off
+                    <% end %>
+                  <% end %>
+                </p>
               </div>
               <div class="tab-menu-text-alt"><p><%= link_to mp.sp_title, mp %></p></div>
               <div class="tab-menu-text-alt">
@@ -85,10 +103,13 @@
           <% @most_deals.each do |md| %>  
            <div class="tab-menu-text">
             <div class="tab-menu-img"><%= link_to image_tag(md.sd_image, alt: md.sd_title, title: md.sd_image_title), md %></div>
+            <div class="tab-menu-text-title">
+              <span class="where"><%= md.sdcategory.name %></span>
+            </div>
             <div class="tab-menu-text-alt"><p><%= link_to md.sd_title, md %></p></div>
             <div class="tab-menu-text-alt">
              <% if md.sd_spare_31.present? %>
-              <span><em><%= number_to_currency(md.sd_spare_31) %></em> <%= number_to_currency(md.sd_spare_32) %> | <span class="where">@<%= md.sdcategory.name %></span></span>
+              <span><em><%= number_to_currency(md.sd_spare_31) %></em> <%= number_to_currency(md.sd_spare_32) %> </span>
              <% else %>
               <span><em><%= number_to_currency(md.sd_spare_33) %></em> <%= number_to_currency(md.sd_spare_34) %> | @<%= md.sdcategory.name %></span>
              <% end %>
