--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,14 +68,14 @@
         scrolling_pc = $(window).scrollTop();
         //console.log(scrolling_pc);
         if(scrolling_pc > 100){
-          $("header").addClass("on");
+          $(".index_header").addClass("on");
           $(".gadgets_wrapper main section#filter").addClass("on");
           $(".gadgets_wrapper main .gnb_open").addClass("on");
           $(".gadgets_wrapper main .gnb_open_b").addClass("on");
           $(".sub_nav .gnb_open").addClass("on");
           $(".sub_nav .gnb_open_b").addClass("on");
         }else{
-          $("header").removeClass("on");
+          $(".index_header").removeClass("on");
           $(".gadgets_wrapper main section#filter").removeClass("on");
           $(".gadgets_wrapper main .gnb_open").removeClass("on");
           $(".gadgets_wrapper main .gnb_open_b").removeClass("on");
