--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="clearfix">
+<header class="clearfix index_header">
   <div class="wrap">
     <button class="gnb_open2"><img src="<%=asset_path 'main_ham.png' %>" alt="open mobile menu" /></button>
     <div class="gnb_pc clearfix">
