deals with image

--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -35,8 +35,9 @@
         </div> -->
         
         <div class="card_wrap sort-list">
-          <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Deal finder on Amazon" /></a></div>
-          <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain_m.png' %>" alt="Deal finder on Amazon" /></a></div>
+          <!-- <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Deal finder on Amazon" /></a></div> -->
+          <div class="middle_box"><a target="_blank" href="https://amzn.to/2OQpHng"><img src="<%=asset_path '12days.png' %>" alt="Deal finder on Amazon" /></a></div>
+          <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2OQpHng"><img src="<%=asset_path '12days_n.png' %>" alt="Deal finder on Amazon" /></a></div>
           <p class="updating updating_m"><a href="/promocodes">GO TO DISCOVER THE BEST DEALS MORE</a></h2>
           <%= render 'deals/body_bestdeals' %>
           <%= render 'deals/body_hotdeals' %>
