--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -34,8 +34,8 @@
         </div> -->
         
         <div class="card_wrap sort-list">
-          <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Deal finder on Amazon" /></a></div>
-          <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain_m.png' %>" alt="Deal finder on Amazon" /></a></div>
+          <div class="middle_box"><a target="_blank" href="https://amzn.to/2OQpHng"><img src="<%=asset_path '12days.png' %>" alt="Deal finder on Amazon" /></a></div>
+          <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2OQpHng"><img src="<%=asset_path '12days_m.png' %>" alt="Deal finder on Amazon" /></a></div>
           <p class="updating updating_m"><a href="/promocodes">GO TO PROMO CODES MORE</a></h2>
           <%= render 'deals/body_promocodes' %>
           <%= render 'deals/body_promocode' %>
